# braccio_camai

./: CMakeLists.txt  LICENSE  README.md  package.xml
arduino/BraccioRobotRos/: BraccioRobotRos.ino
arduino/BraccioServoRos/: BraccioServoRos.ino
config/: braccio_visual.srdf  face_detection.rviz  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_face_detection.rviz  ompl_planning.yaml
docs/source/: assembly.rst  conf.py  contact.rst  description.rst  electronics.rst  index.rst  installation.rst  questions.rst  tutorial_face_detection.rst  tutorial_moveit.rst  tutorial_object_detection.rst
launch/: braccio_driver_moveit.launch  braccio_gui.launch  move_group.launch  ompl_planning_pipeline.launch  trajectory_execution.launch
launch/drivers/: raspicam.launch
launch/face_detection/: braccio_driver_face_detection.launch  braccio_driver_moveit_face_detection.launch  braccio_gui_face_detection.launch  braccio_gui_moveit_face_detection.launch
launch/moveit/: move_group.launch  ompl_planning_pipeline.launch  planning_context.launch  trajectory_execution.launch
launch/object_detection/: braccio_driver_object_detection.launch  braccio_gui_object_detection.launch
src/: DirectJointInterface.cpp  MoveitJointInterface.cpp  face_detection_edge_tpu.py
urdf/: braccio_arm.urdf
